test/functions/deitz/named/test_named6-error.chpl
proc foo(i : int, j : int, k : int) {
  writeln("foo of ", i, ", ", j, ", ", k);
}

foo(i = 1, i = 2, 3);
